--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "redux": "^4.1.2",
+    "styled-jsx": "^5.0.2",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
