--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^13.5.0",
+    "firebase": "^9.8.3",
     "react": "^17.0.0",
     "react-beautiful-dnd": "^13.1.0",
     "react-color": "^2.19.3",
